revision note and api url
